// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`message return complete 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "

🚀 mock message
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`message return exit 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "

💩 mock message
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`message return failure 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "
🔴 [31mfailure [0m",
      "[31mmock message[0m",
      undefined,
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`message return success 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "
🟢 [32msuccess [0m",
      "[32mmock message[0m",
      undefined,
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`message return warning 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "
🟡 [33mwarning [0m",
      "[33mmock message[0m",
      undefined,
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
